Archive2/a0/1b35ba5aea6133/output
main.cpp: In function 'int main()':
main.cpp:60:16: error: unable to find string literal operator 'operator""backwardIteration'
     std::cout<<"Minimum number of zeros: "backwardIteration(initialState, m)<<"\n"<<std::endl;
                ^
